Utilize baconjs library to listen to click streams and transforming them into path segments that are drawn to the canvas

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ bin
 *.pyc
 /node_modules
 *.js~
+/.tern-project
+/lib/GoogleClosureLibrary/closure/bin/build/source.pyc
+/lib/GoogleClosureLibrary/closure/bin/build/treescan.pyc
