--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": [],
   "devDependencies": {
     "karma": "~0.10",
-    "karma-closure": "~0.1.0"
+    "karma-closure": "~0.1.0",
+    "karma-teamcity-reporter": "~0.1.2"
   },
   "version": "1.1.6"
 }
