Utilize the angular-sanitize component via bower that matches up with angular-dialog-services Copy fonts from bootstrap to fonts directory

--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
   "authors": [
 	  "Jeff Williams <jeff.williams@codeshelf.com>",
 	  "Jon Ranstrom <jon.ranstrom@codeshelf.com",
-      "Paul Monteiro <paul.monteiro@codeshelf.com>",
-
+      "Paul Monteiro <paul.monteiro@codeshelf.com>"
   ],
   "description": "The primary codeshelf web ui",
   "license": "MIT",
