Refactored all view to use the context menu class 	In some views removed the context menu if it didn't have any actions
    add permissions to the context menu defs and check with authz

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ bin
 /.tern-project
 /lib/GoogleClosureLibrary/closure/bin/build/source.pyc
 /lib/GoogleClosureLibrary/closure/bin/build/treescan.pyc
+/.projectile
+/.tern-port
