--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "karma": "~0.10",
     "karma-closure": "~0.1.0",
-    "karma-teamcity-reporter": "~0.1.2"
+    "karma-teamcity-reporter": "~0.1.2",
+    "karma-junit-reporter": "~0.2.2"
   },
   "version": "1.1.6"
 }
