--- a/productivity/package.json
+++ b/productivity/package.json
@@ -18,12 +18,12 @@
     "karma-webpack": "~1.3.1",
     "jasmine": "~2.1.1",
     "karma": "~0.12.28",
-    "bower": "~1.3.12",
-    "lodash": "~2.4.1"
+    "bower": "~1.3.12"
   },
   "dependencies": {
     "react": "~0.12.1",
     "react-tools": "*",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "lodash": "~2.4.1"
   }
 }
