--- a/productivity/package.json
+++ b/productivity/package.json
@@ -24,6 +24,7 @@
     "react": "~0.12.1",
     "react-tools": "*",
     "jquery": "~2.1.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "rx": "~2.3.22"
   }
 }
