--- a/productivity/package.json
+++ b/productivity/package.json
@@ -9,16 +9,17 @@
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "webpack": "~1.4.13",
-    "webpack-dev-server": "~1.6.6",
-    "jsx-loader": "~0.12.2",
-    "karma-chrome-launcher": "~0.1.7",
+    "bower": "~1.3.12",
+    "jasmine": "~2.1.1",
     "jasmine-core": "~2.1.3",
+    "jsx-loader": "~0.12.2",
+    "karma": "~0.12.28",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "~0.3.2",
     "karma-webpack": "~1.3.1",
-    "jasmine": "~2.1.1",
-    "karma": "~0.12.28",
-    "bower": "~1.3.12"
+    "webpack": "~1.4.13",
+    "webpack-dev-server": "~1.6.6"
   },
   "dependencies": {
     "react": "~0.12.1",
