--- a/productivity/package.json
+++ b/productivity/package.json
@@ -17,6 +17,7 @@
     "karma-chrome-launcher": "~0.1.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "~0.3.2",
+    "karma-sourcemap-loader": "^0.3.2",
     "karma-webpack": "~1.3.1",
     "webpack": "~1.4.13",
     "webpack-dev-server": "~1.6.6"
