--- a/productivity/package.json
+++ b/productivity/package.json
@@ -23,10 +23,11 @@
     "webpack-dev-server": "~1.6.6"
   },
   "dependencies": {
-    "react": "~0.12.1",
-    "react-tools": "*",
     "jquery": "~2.1.1",
     "lodash": "~2.4.1",
+    "moment": "^2.8.4",
+    "react": "~0.12.1",
+    "react-tools": "*",
     "rx": "~2.3.22"
   }
 }
