--- a/productivity/package.json
+++ b/productivity/package.json
@@ -27,6 +27,7 @@
     "lodash": "~2.4.1",
     "moment": "^2.8.4",
     "react": "~0.12.1",
+    "react-router": "^0.11.6",
     "react-tools": "*",
     "rx": "~2.3.22"
   }
