--- a/productivity/package.json
+++ b/productivity/package.json
@@ -13,7 +13,8 @@
     "jasmine": "~2.1.1",
     "jasmine-core": "~2.1.3",
     "jsx-loader": "~0.12.2",
-    "karma": "~0.12.28",
+    "lodash": "~2.4.1",
+    "karma": "~0.12.31",
     "karma-chrome-launcher": "~0.1.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "~0.3.2",
@@ -24,10 +25,12 @@
   },
   "dependencies": {
     "jquery": "~2.1.1",
-    "lodash": "~3.1.0",
+    "lodash": "~3.3.1",
     "moment": "^2.8.4",
-    "react": "~0.12.1",
-    "react-router": "^0.11.6",
+    "react": "~0.12.0",
+    "react-bootstrap": "^0.16.1",
+    "react-router": "^0.12.4",
+    "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
     "rx": "~2.3.22"
   }
