--- a/productivity/package.json
+++ b/productivity/package.json
@@ -32,6 +32,7 @@
     "react-router": "^0.12.4",
     "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
-    "rx": "~2.3.22"
+    "rx": "~2.3.22",
+    "tablesaw": "^1.0.3"
   }
 }
