--- a/productivity/package.json
+++ b/productivity/package.json
@@ -24,6 +24,8 @@
     "webpack-dev-server": "~1.6.6"
   },
   "dependencies": {
+    "css-loader": "^0.9.1",
+    "imports-loader": "^0.6.3",
     "jquery": "~2.1.1",
     "lodash": "~3.3.1",
     "moment": "^2.8.4",
@@ -33,6 +35,7 @@
     "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
     "rx": "~2.3.22",
+    "style-loader": "^0.8.3",
     "tablesaw": "^1.0.3"
   }
 }
