--- a/productivity/bower.json
+++ b/productivity/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "chartjs": "nnnick/Chart.js#1cfa42bc24e152cfef79523c310fae7d4c458635"
+    "chartjs": "nnnick/Chart.js#1cfa42bc24e152cfef79523c310fae7d4c458635",
+    "tablesaw": "~1.0.4"
   }
 }
