--- a/productivity/package.json
+++ b/productivity/package.json
@@ -35,7 +35,6 @@
     "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
     "rx": "~2.3.22",
-    "style-loader": "^0.8.3",
-    "tablesaw": "^1.0.3"
+    "style-loader": "^0.8.3"
   }
 }
