--- a/productivity/package.json
+++ b/productivity/package.json
@@ -35,6 +35,7 @@
     "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
     "rx": "~2.3.22",
+    "script-loader": "^0.6.1",
     "style-loader": "^0.8.3"
   }
 }
