--- a/productivity/package.json
+++ b/productivity/package.json
@@ -13,28 +13,28 @@
     "jasmine": "~2.1.1",
     "jasmine-core": "~2.1.3",
     "jsx-loader": "~0.12.2",
-    "lodash": "~2.4.1",
-    "karma": "~0.12.31",
+    "karma": "^0.12.31",
     "karma-chrome-launcher": "~0.1.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "~0.3.2",
     "karma-sourcemap-loader": "^0.3.2",
     "karma-webpack": "~1.3.1",
-    "webpack": "~1.7.3",
+    "lodash": "^3.3.1",
+    "webpack": "^1.7.3",
     "webpack-dev-server": "~1.6.6"
   },
   "dependencies": {
     "css-loader": "^0.9.1",
     "imports-loader": "^0.6.3",
     "jquery": "~2.1.1",
-    "lodash": "~3.3.1",
+    "lodash": "^3.3.1",
     "moment": "^2.8.4",
     "react": "~0.12.0",
     "react-bootstrap": "^0.16.1",
     "react-router": "^0.12.4",
     "react-router-bootstrap": "^0.9.1",
     "react-tools": "*",
-    "rx": "~2.3.22",
+    "rx": "~2.4.6",
     "script-loader": "^0.6.1",
     "style-loader": "^0.8.3"
   }
