--- a/package.json
+++ b/package.json
@@ -1,12 +1,75 @@
 {
   "name": "CodeshelfUX",
   "contributors": [],
-  "dependencies": [],
+  "scripts": {
+    "postinstall": "./node_modules/.bin/gulp build --production",
+    "start": "node src/server",
+    "test": "./node_modules/.bin/gulp test"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "dependencies": {
+    "bluebird": "^2.9.9",
+    "bootstrap": "^3.3.4",
+    "classnames": "^1.1.4",
+    "compression": "^1.4.0",
+    "del": "^1.1.1",
+    "eventemitter3": "^0.1.6",
+    "express": "^4.11.2",
+    "fastclick": "^1.0.6",
+    "flux": "^2.0.1",
+    "immutable": "^3.6.4",
+    "intl": "^0.1.4",
+    "intl-messageformat": "^1.1.0",
+    "jquery": "^2.1.3",
+    "lodash": "^3.6.0",
+    "node-notifier": "^4.1.0",
+    "normalize.css": "^3.0.2",
+    "piping": "0.1.6",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.19.1",
+    "react-document-title": "^1.0.0",
+    "react-fa": "^3.2.0",
+    "react-intl": "^1.1.0",
+    "react-router": "^0.13.1",
+    "react-router-bootstrap": "^0.12.1",
+    "run-sequence": "^1.0.2",
+    "serve-favicon": "^2.2.0",
+    "validator": "^3.34.0",
+    "yargs": "^3.3.1"
+  },
   "devDependencies": {
+    "eslint-plugin-react": "^2.0.1",
+    "extract-text-webpack-plugin": "^0.5.0",
+    "css-loader": "^0.9.1",
+    "file-loader": "^0.8.1",
+    "jest-cli": "^0.4.0",
+    "react-hot-loader": "^1.1.4",
+    "less-loader": "^2.0.0",
+    "autoprefixer-loader": "^1.2.0",
+    "babel": "^4.0.1",
+    "babel-core": "^4.0.1",
+    "babel-eslint": "^2.0.2",
+    "babel-jest": "^4.0.0",
+    "babel-loader": "^4.0.0",
+    "bower": "^1.3.12",
+    "gulp-closure-compiler": "^0.2.17",
     "karma": "~0.10",
     "karma-closure": "~0.1.0",
     "karma-teamcity-reporter": "~0.1.2",
-    "karma-junit-reporter": "~0.2.2"
+    "karma-junit-reporter": "~0.2.2",
+    "webpack": "^1.5.3",
+    "webpack-dev-server": "^1.7.0",
+    "style-loader": "^0.9.0",
+    "stylus-loader": "^1.0.0",
+    "url-loader": "^0.5.5",
+    "gulp": "^3.8.10",
+    "gulp-bg": "0.0.5",
+    "gulp-eslint": "^0.7.0",
+    "gulp-util": "^3.0.2",
+    "harmonize": "^1.4.1",
+    "sass-loader": "^1.0.0"
   },
   "version": "1.1.6"
 }
