--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bluebird": "^2.9.9",
     "bootstrap": "^3.3.4",
+    "bower": "^1.4.1",
+    "chart.js": "^1.0.2",
     "classnames": "^1.1.4",
     "compression": "^1.4.0",
     "del": "^1.1.1",
@@ -20,6 +22,7 @@
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
     "immutable": "^3.6.4",
+    "imports-loader": "^0.6.3",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
@@ -35,6 +38,7 @@
     "react-router": "^0.13.1",
     "react-router-bootstrap": "^0.12.1",
     "run-sequence": "^1.0.2",
+    "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
     "validator": "^3.34.0",
     "yargs": "^3.3.1"
