--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "jquery": "~1.8.1",
     "jquery-ui": "1.8.23",
     "SlickGrid": "mleibman/SlickGrid#2.1",
-    "moment": "~2.8.3"
+    "moment": "~2.8.3",
+    "nvd3": "~1.7.1"
   },
   "resolutions": {
     "jquery": "~1.8.1"
