--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "chart.js": "^1.0.2",
     "classnames": "^1.1.4",
     "compression": "^1.4.0",
+    "d3": "^3.5.5",
     "del": "^1.1.1",
     "eventemitter3": "^0.1.6",
+    "exports-loader": "^0.6.2",
     "express": "^4.11.2",
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
@@ -27,6 +29,7 @@
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
     "lodash": "^3.6.0",
+    "moment": "^2.9.0",
     "node-notifier": "^4.1.0",
     "normalize.css": "^3.0.2",
     "piping": "0.1.6",
