--- a/bower.json
+++ b/bower.json
@@ -26,9 +26,10 @@
     "jquery-ui": "1.8.23",
     "SlickGrid": "mleibman/SlickGrid#2.1",
     "moment": "~2.8.3",
-    "nvd3": "~1.7.1"
+    "nvd3": "~1.7.1",
+    "tablesaw": "~1.0.4"
   },
   "resolutions": {
-    "jquery": "~1.8.1"
+    "jquery": ">=1.9.1"
   }
 }
