--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "CodeshelfUX",
   "contributors": [],
   "scripts": {
-    "postinstall": "./node_modules/.bin/gulp build --production",
+    "postinstall": "./node_modules/.bin/bower install; ./node_modules/.bin/gulp build --production",
     "start": "node src/server",
     "test": "./node_modules/.bin/gulp test"
   },
@@ -12,19 +12,16 @@
   "dependencies": {
     "bluebird": "^2.9.9",
     "bootstrap": "^3.3.4",
-    "bower": "^1.4.1",
     "chart.js": "^1.0.2",
     "classnames": "^1.1.4",
     "compression": "^1.4.0",
     "d3": "^3.5.5",
     "del": "^1.1.1",
     "eventemitter3": "^0.1.6",
-    "exports-loader": "^0.6.2",
     "express": "^4.11.2",
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
     "immutable": "^3.6.4",
-    "imports-loader": "^0.6.3",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
@@ -47,8 +44,11 @@
     "yargs": "^3.3.1"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "eslint-plugin-react": "^2.0.1",
     "extract-text-webpack-plugin": "^0.5.0",
+    "exports-loader": "^0.6.2",
+    "imports-loader": "^0.6.3",
     "css-loader": "^0.9.1",
     "file-loader": "^0.8.1",
     "jest-cli": "^0.4.0",
