--- a/package.json
+++ b/package.json
@@ -44,16 +44,6 @@
     "yargs": "^3.3.1"
   },
   "devDependencies": {
-    "bower": "^1.4.1",
-    "eslint-plugin-react": "^2.0.1",
-    "extract-text-webpack-plugin": "^0.5.0",
-    "exports-loader": "^0.6.2",
-    "imports-loader": "^0.6.3",
-    "css-loader": "^0.9.1",
-    "file-loader": "^0.8.1",
-    "jest-cli": "^0.4.0",
-    "react-hot-loader": "^1.1.4",
-    "less-loader": "^2.0.0",
     "autoprefixer-loader": "^1.2.0",
     "babel": "^4.0.1",
     "babel-core": "^4.0.1",
@@ -61,22 +51,31 @@
     "babel-jest": "^4.0.0",
     "babel-loader": "^4.0.0",
     "bower": "^1.3.12",
+    "css-loader": "^0.9.1",
+    "eslint-plugin-react": "^2.0.1",
+    "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.5.0",
+    "file-loader": "^0.8.1",
+    "gulp": "^3.8.10",
+    "gulp-bg": "0.0.5",
     "gulp-closure-compiler": "^0.2.17",
+    "gulp-eslint": "^0.8.0",
+    "gulp-util": "^3.0.2",
+    "harmonize": "^1.4.1",
+    "imports-loader": "^0.6.3",
+    "jest-cli": "^0.4.0",
     "karma": "~0.10",
     "karma-closure": "~0.1.0",
-    "karma-teamcity-reporter": "~0.1.2",
     "karma-junit-reporter": "~0.2.2",
-    "webpack": "^1.5.3",
-    "webpack-dev-server": "^1.7.0",
+    "karma-teamcity-reporter": "~0.1.2",
+    "less-loader": "^2.0.0",
+    "react-hot-loader": "^1.1.4",
+    "sass-loader": "^1.0.0",
     "style-loader": "^0.9.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
-    "gulp": "^3.8.10",
-    "gulp-bg": "0.0.5",
-    "gulp-eslint": "^0.7.0",
-    "gulp-util": "^3.0.2",
-    "harmonize": "^1.4.1",
-    "sass-loader": "^1.0.0"
+    "webpack": "^1.5.3",
+    "webpack-dev-server": "^1.7.0"
   },
   "version": "2.0.0"
 }
