--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^3.6.0",
     "moment": "^2.9.0",
     "node-notifier": "^4.1.0",
+    "node-uuid": "^1.4.3",
     "normalize.css": "^3.0.2",
     "piping": "0.1.6",
     "react": "^0.13.1",
