--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install; ./node_modules/.bin/gulp build --production",
     "dev": "./node_modules/.bin/gulp",
-    "test": "./node_modules/.bin/gulp test"
+    "test": "./node_modules/karma/bin/karma --log-level info start"
   },
   "engines": {
     "node": "0.10.x"
@@ -66,11 +66,18 @@
     "gulp-util": "^3.0.2",
     "harmonize": "^1.4.1",
     "imports-loader": "^0.6.3",
+    "jasmine": "^2.2.1",
+    "jasmine-core": "^2.2.0",
     "jest-cli": "^0.4.0",
-    "karma": "~0.10",
+    "karma": "^0.12.31",
     "karma-closure": "~0.1.0",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "~0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-sourcemap-loader": "^0.3.4",
     "karma-teamcity-reporter": "~0.1.2",
+    "karma-webpack": "^1.5.0",
     "less-loader": "^2.0.0",
     "react-hot-loader": "^1.1.4",
     "sass-loader": "^1.0.0",
