--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-intl": "^1.1.0",
     "react-router": "^0.13.1",
     "react-router-bootstrap": "^0.12.1",
+    "reactabular": "^0.5.2",
     "run-sequence": "^1.0.2",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
