--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
   ],
   "dependencies": {
     "moment": "~2.8.3",
-    "nvd3": "~1.7.1",
-    "tablesaw": "~1.0.4"
+    "nvd3": "~1.7.1"
   },
   "resolutions": {
     "jquery": ">=1.9.1"
