--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^0.13.3",
     "react-bootstrap": "^0.19.1",
     "react-document-title": "^1.0.0",
+    "react-dropzone": "^1.1.1",
     "react-fa": "^3.2.0",
     "react-intl": "^1.1.0",
     "react-router": "^0.13.1",
