--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "run-sequence": "^1.0.2",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
+    "superagent-bluebird-promise": "^2.0.2",
     "validator": "^3.34.0",
     "yargs": "^3.3.1"
   },
