--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "lodash": "^3.6.0",
     "moment": "^2.9.0",
     "node-notifier": "^4.1.0",
     "node-uuid": "^1.4.3",
     "normalize.css": "^3.0.2",
     "piping": "0.1.6",
+    "pivottable": "^1.6.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.19.1",
     "react-document-title": "^1.0.0",
