--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "css-loader": "^0.9.1",
     "eslint-plugin-react": "^2.0.1",
     "exports-loader": "^0.6.2",
+    "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.5.0",
     "file-loader": "^0.8.1",
     "gulp": "^3.8.10",
