--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pivottable": "^1.6.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.19.1",
+    "react-dnd": "^1.1.4",
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
     "react-fa": "^3.2.0",
