--- a/package.json
+++ b/package.json
@@ -22,22 +22,20 @@
     "express": "^4.11.2",
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
-    "griddle-react": "^0.2.12",
     "immstruct": "^1.4.1",
     "immutable": "^3.6.4",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
-    "lodash": "^3.6.0",
+    "lodash": "3.10.0",
     "moment": "^2.9.0",
-    "node-notifier": "^4.1.0",
     "node-uuid": "^1.4.3",
     "normalize.css": "^3.0.2",
     "orb": "^1.0.9",
     "piping": "0.1.6",
     "pivottable": "^1.6.1",
-    "react": "^0.13.3",
+    "react": "~0.13.3",
     "react-bootstrap": "^0.19.1",
     "react-dnd": "^1.1.4",
     "react-document-title": "^1.0.0",
@@ -46,7 +44,6 @@
     "react-intl": "^1.1.0",
     "react-router": "^0.13.1",
     "react-router-bootstrap": "^0.12.1",
-    "reactabular": "^0.5.2",
     "run-sequence": "^1.0.2",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
@@ -55,7 +52,8 @@
     "yargs": "^3.3.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^1.2.0",
+
+      "autoprefixer-loader": "^1.2.0",
     "babel": "^5.3.3",
     "babel-core": "^5.3.3",
     "babel-eslint": "^3.1.1",
@@ -88,6 +86,7 @@
     "karma-teamcity-reporter": "~0.1.2",
     "karma-webpack": "^1.5.0",
     "less-loader": "^2.0.0",
+    "node-notifier": "^4.1.0",
     "react-hot-loader": "^1.2.7",
     "sass-loader": "^1.0.0",
     "style-loader": "^0.9.0",
