--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
     "react-fa": "^3.2.0",
+    "react-immutable-proptypes": "^1.1.0",
     "react-intl": "^1.1.0",
     "react-router": "^0.13.1",
     "react-router-bootstrap": "^0.12.1",
@@ -52,8 +53,7 @@
     "yargs": "^3.3.1"
   },
   "devDependencies": {
-
-      "autoprefixer-loader": "^1.2.0",
+    "autoprefixer-loader": "^1.2.0",
     "babel": "^5.3.3",
     "babel-core": "^5.3.3",
     "babel-eslint": "^3.1.1",
