--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-fa": "^3.2.0",
     "react-immutable-proptypes": "^1.1.0",
     "react-intl": "^1.1.0",
-    "react-router": "^0.13.1",
+    "react-router": "0.13.3",
     "react-router-bootstrap": "^0.12.1",
     "run-sequence": "^1.0.2",
     "rx": "^2.4.9",
