--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel": "^5.3.3",
-    "babel-core": "^5.3.3",
-    "babel-eslint": "^3.1.1",
-    "babel-jest": "^5.2.0",
-    "babel-loader": "^5.0.0",
+    "babel": "5.8.21",
+    "babel-core": "5.8.22",
+    "babel-eslint": "3.1.30",
+    "babel-jest": "5.3.0",
+    "babel-loader": "5.3.2",
     "bower": "^1.3.12",
     "css-loader": "^0.9.1",
     "eslint-plugin-react": "^2.0.1",
