--- a/package.json
+++ b/package.json
@@ -76,15 +76,15 @@
     "jasmine": "^2.2.1",
     "jasmine-core": "^2.2.0",
     "jest-cli": "^0.4.0",
-    "karma": "^0.12.31",
-    "karma-closure": "~0.1.0",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "~0.2.2",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sourcemap-loader": "^0.3.4",
+    "karma": "^0.13.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.0",
+    "karma-mocha": "^0.2.0",
+    "karma-notify-reporter": "^0.1.1",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
     "karma-teamcity-reporter": "~0.1.2",
-    "karma-webpack": "^1.5.0",
     "less-loader": "^2.0.0",
     "node-notifier": "^4.1.0",
     "react-hot-loader": "^1.2.7",
@@ -93,7 +93,8 @@
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.8.2"
+    "webpack-dev-server": "^1.8.2",
+    "skin-deep": "~0.6.0"
   },
   "version": "2.0.0"
 }
