--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
     "react-fa": "^4.0.0",
     "react-immutable-proptypes": "^1.1.0",
     "react-intl": "^1.1.0",
+    "react-redux": "^3.0.0",
     "react-router": "0.13.3",
     "react-router-bootstrap": "^0.12.1",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-thunk": "^1.0.0",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
     "superagent-bluebird-promise": "^2.1.1",
