--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
   "stage": 2, // Draft + Candidate
+  "plugins": [ "extensible-destructuring:after" ],
+  "blacklist": [ "es6.destructuring" ],
   "optional": [
     // Stage 1 - Proposal
     "es7.classProperties",
