--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
     "react-fa": "^4.0.0",
-    "react-immutable-proptypes": "^1.1.0",
+    "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.1.0",
     "react-redux": "^3.0.0",
     "react-router": "0.13.3",
@@ -61,6 +61,7 @@
     "babel-eslint": "3.1.30",
     "babel-jest": "5.3.0",
     "babel-loader": "5.3.2",
+    "babel-plugin-extensible-destructuring": "^1.0.2",
     "bower": "^1.3.12",
     "css-loader": "^0.9.1",
     "eslint-plugin-react": "^2.0.1",
@@ -85,19 +86,19 @@
     "karma-mocha": "^0.2.0",
     "karma-notify-reporter": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.7.0",
     "karma-teamcity-reporter": "~0.1.2",
+    "karma-webpack": "^1.7.0",
     "less-loader": "^2.0.0",
     "node-notifier": "^4.1.0",
-    "run-sequence": "^1.0.2",
     "react-hot-loader": "^1.2.7",
+    "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
+    "skin-deep": "~0.6.0",
     "style-loader": "^0.9.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.8.2",
-    "skin-deep": "~0.6.0"
+    "webpack-dev-server": "^1.8.2"
   },
   "version": "2.0.0"
 }
