--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-bootstrap": "^0.12.1",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
+    "redux-storage": "^1.3.4",
     "redux-thunk": "^1.0.0",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
