--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "3.1.30",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-class-properties": "^6.3.0",
+    "babel-plugin-transform-decorators": "^6.1.18",
     "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
