--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
-    "bootstrap": "^3.3.4",
+    "bootstrap": "^3.3.6",
     "chance": "^0.7.3",
     "chart.js": "^1.0.2",
     "classnames": "^1.2.1",
     "compression": "^1.4.0",
-    "d3": "^3.5.5",
+    "d3": "^3.5.10",
     "del": "^1.1.1",
     "eventemitter3": "^0.1.6",
     "express": "^4.11.2",
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
     "immstruct": "^1.4.1",
-    "immutable": "^3.6.4",
+    "immutable": "^3.7.5",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
-    "lodash": "3.10.0",
+    "lodash": "^3.10.1",
     "moment": "^2.9.0",
-    "node-uuid": "^1.4.3",
+    "node-uuid": "^1.4.7",
     "normalize.css": "^3.0.2",
     "orb": "^1.0.9",
     "piping": "0.1.6",
@@ -42,7 +42,7 @@
     "react-dropzone": "^1.1.1",
     "react-fa": "^4.0.0",
     "react-immutable-proptypes": "^1.5.0",
-    "react-intl": "^1.1.0",
+    "react-intl": "^1.2.2",
     "react-redux": "^3.0.0",
     "react-router": "0.13.3",
     "react-router-bootstrap": "^0.12.1",
