--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
     "immstruct": "^1.4.1",
-    "immutable": "^3.7.5",
+    "immutable": "^3.7.6",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
@@ -43,6 +43,7 @@
     "react-fa": "^4.0.0",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^3.0.0",
     "react-router": "0.13.3",
     "react-router-bootstrap": "^0.12.1",
@@ -61,6 +62,7 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "3.1.30",
     "babel-loader": "^6.2.0",
+    "babel-plugin-extensible-destructuring": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.0",
     "babel-plugin-transform-decorators": "^6.1.18",
     "babel-plugin-transform-object-rest-spread": "^6.1.18",
