--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^3.0.0",
     "react-router": "0.13.3",
     "react-router-bootstrap": "^0.13.6",
+    "react-sparklines": "^1.4.2",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-storage": "^1.3.4",
