--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fastclick": "^1.0.6",
     "flux": "^2.0.1",
     "immstruct": "^1.4.1",
-    "immutable": "^3.7.5",
+    "immutable": "^3.7.6",
     "intl": "^0.1.4",
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
@@ -41,6 +41,7 @@
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
     "react-fa": "^4.0.0",
+    "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
     "react-redux": "^3.0.0",
