--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
     "react-fa": "^4.0.0",
+    "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
     "react-pure-render": "^1.0.2",
