--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "redux-thunk": "^1.0.0",
     "rx": "^2.4.9",
     "serve-favicon": "^2.2.0",
-    "superagent-bluebird-promise": "^2.1.1",
+    "superagent-bluebird-promise": "2.1.1",
     "validator": "^3.34.0",
     "yargs": "^3.3.1"
   },
@@ -61,13 +61,12 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "3.1.30",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-class-properties": "^6.3.0",
+    "babel-plugin-transform-class-properties": "6.3.0",
     "babel-plugin-transform-decorators": "^6.1.18",
     "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.2.0",
-    "bluebird": "^2.10.2",
     "bower": "^1.3.12",
     "css-loader": "^0.9.1",
     "eslint-plugin-react": "^2.0.1",
@@ -102,8 +101,8 @@
     "style-loader": "^0.9.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
-    "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.8.2"
+    "webpack": "1.9.13",
+    "webpack-dev-server": "1.8.2"
   },
   "version": "2.0.0"
 }
