--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "intl-messageformat": "^1.1.0",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
+    "jspath": "^0.3.2",
     "lodash": "^3.10.1",
     "moment": "^2.9.0",
     "node-uuid": "^1.4.7",
