--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "piping": "0.1.6",
     "react": "~0.13.3",
     "react-bootstrap": "0.25.0",
+    "react-burger-menu": "^1.1.6",
     "react-dnd": "^1.1.4",
     "react-document-title": "^1.0.0",
     "react-dropzone": "^1.1.1",
@@ -48,6 +49,7 @@
     "react-redux": "^3.0.0",
     "react-router": "0.13.3",
     "react-router-bootstrap": "^0.13.6",
+    "react-sidebar": "^1.1.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
     "redux-storage": "^1.3.4",
