--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
     "jspath": "^0.3.2",
-    "lodash": "^3.10.1",
+    "lodash": "3.10.1",
     "moment": "^2.9.0",
     "node-uuid": "^1.4.7",
     "normalize.css": "^3.0.2",
