Preparations for selenium testing

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspath": "^0.3.2",
     "lodash": "3.10.1",
     "moment": "^2.9.0",
+    "nightwatch": "^0.8.16",
     "node-uuid": "^1.4.7",
     "normalize.css": "^3.0.2",
     "orb": "^1.0.9",
@@ -86,6 +87,7 @@
     "gulp-bg": "0.0.5",
     "gulp-closure-compiler": "^0.2.17",
     "gulp-eslint": "^0.8.0",
+    "gulp-nightwatch": "^0.2.9",
     "gulp-util": "^3.0.2",
     "harmonize": "^1.4.1",
     "imports-loader": "^0.6.3",
