--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.2.0",
     "css-loader": "^0.9.1",
+    "esformatter": "^0.9.2",
+    "esformatter-jsx": "^4.1.3",
     "eslint-plugin-react": "^2.0.1",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.0",
