Add pdf previews (still needs polishing)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-uuid": "^1.4.7",
     "normalize.css": "^3.0.2",
     "orb": "^1.0.9",
+    "pdfjs-dist": "^1.4.133",
     "piping": "0.1.6",
     "react": "0.14.4",
     "react-bootstrap": "0.28.2",
@@ -49,6 +50,7 @@
     "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^1.2.2",
+    "react-pdf": "0.0.10",
     "react-pure-render": "^1.0.2",
     "react-redux": "3.1.2",
     "react-router": "2.0.0-rc5",
