shrinkwrap dependencies to make builds more consistent

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "pdfjs-dist": "^1.4.133",
     "piping": "0.1.6",
     "react": "^15.0.1",
-    "react-bootstrap": "0.28.2",
+    "react-bootstrap": "^0.28.5",
     "react-bootstrap-multiselect": "^1.0.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "2.0.2",
@@ -52,7 +52,6 @@
     "react-faux-dom": "^2.1.1",
     "react-immutable-proptypes": "^1.5.0",
     "react-intl": "^2.1.0",
-    "react-pdf": "0.0.10",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
